--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,11 +3,13 @@
 /* ============================================================================
     
     Weiss 2012
+
 ============================================================================= */
 
 @import "basic-and-layout";
-@import "specific-html-support";
+//@import "specific-html-support";
 @import "themed";
 @import "masterclasses";
 @import "plugin-support";
 //@import "screen";
+@import "print";
