--- a/sass/_themed.scss
+++ b/sass/_themed.scss
@@ -6,7 +6,7 @@
     
 ============================================================================= */
 
-@import "_mixins.scss";
+@import "_mixins";
 
 /* ============================================================================
     3.1 Header
