--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,7 +7,7 @@
 ============================================================================= */
 
 @import "basic-and-layout";
-//@import "specific-html-support";
+@import "specific-html-support";
 @import "themed";
 @import "masterclasses";
 @import "plugin-support";
