--- a/sass/_masterclasses.scss
+++ b/sass/_masterclasses.scss
@@ -8,9 +8,9 @@
     outline: 1px dashed #ccc;
 }
 
-/* ============================================================================
-    buttons universal
-============================================================================= */
+// /* ============================================================================
+//    buttons universal
+// ============================================================================= */
 
 // .btn {
 //     display:inline-block;
@@ -107,9 +107,9 @@
 
 // }
 
-/* ============================================================================
-    Forms support
-============================================================================= */
+// /* ============================================================================
+//    Forms support
+// ============================================================================= */
 
 // .input-container {
 //    display: inline-block;
