--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,6 +10,6 @@
 @import "specific-html-support";
 @import "themed";
 @import "masterclasses";
-@import "plugin-support";
+//@import "plugin-support";
 //@import "screen";
 @import "print";
